# projectTemplate

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/src/: CMakeLists.txt  main.cc
